refactor: update API endpoints in SentimentAnalyzer and clean up configuration files

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# API Configuration
+# API Configuration (without /api suffix, it's added in the code)
 VITE_API_URL=http://localhost:3001
 
-# For Vercel deployment, set to your backend URL
-# VITE_API_URL=https://your-backend-url.vercel.app
+# For Vercel deployment, set to your backend URL (without /api suffix)
+# VITE_API_URL=https://brin-api.onrender.com
